# aoc2023

./: .gitignore  README.md  aoc2023.cabal  stack.yaml
src/: Main.hs  ParserUtils.hs
src/Day00/: Test.hs
src/Day01/: Trebuchet.hs
src/Day02/: CubeConundrum.hs
src/Day03/: GearRatios.hs
