cabal-version:       2.2

name:                aoc2023
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2023#readme
license:             Unlicense
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable aoc2023
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ParserUtils  
                     , Day00.Test
                     , Day01.Trebuchet
                     , Day02.CubeConundrum
                     , Day03.GearRatios
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 9.0 && < 10
                     , text >= 1.2
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
